--- a/package.json
+++ b/package.json
@@ -10,13 +10,14 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "ejs": "~2.6.1",
-    "express": "~4.16.1",
     "express-ejs-layouts": "^2.5.1",
     "express-validator": "^7.0.1",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.4.1",
-    "morgan": "~1.9.1"
+    "morgan": "~1.9.1",
+    "dotenv": "^16.3.1",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
+    "mongoose": "6.9.1"
   }
 }
